feat: added a new endpoint
