# internal/pkg/service/stream/api/gen/http/stream/server/server.go
@@ -49,6 +49,7 @@ type Server struct {
 	SinkStatisticsClear   http.Handler
 	DisableSink           http.Handler
 	EnableSink            http.Handler
+	ListSinkVersions      http.Handler
 	GetTask               http.Handler
 	AggregationSources    http.Handler
 	CORS                  http.Handler
@@ -134,6 +135,7 @@ func New(
 			{"SinkStatisticsClear", "DELETE", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/statistics/clear"},
 			{"DisableSink", "PUT", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/disable"},
 			{"EnableSink", "PUT", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/enable"},
+			{"ListSinkVersions", "GET", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/versions"},
 			{"GetTask", "GET", "/v1/tasks/{*taskId}"},
 			{"AggregationSources", "GET", "/v1/branches/{branchId}/aggregation/sources"},
 			{"CORS", "OPTIONS", "/"},
@@ -155,6 +157,7 @@ func New(
 			{"CORS", "OPTIONS", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/statistics/clear"},
 			{"CORS", "OPTIONS", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/disable"},
 			{"CORS", "OPTIONS", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/enable"},
+			{"CORS", "OPTIONS", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/versions"},
 			{"CORS", "OPTIONS", "/v1/tasks/{*taskId}"},
 			{"CORS", "OPTIONS", "/v1/branches/{branchId}/aggregation/sources"},
 			{"CORS", "OPTIONS", "/v1/documentation/openapi.json"},
@@ -195,6 +198,7 @@ func New(
 		SinkStatisticsClear:   NewSinkStatisticsClearHandler(e.SinkStatisticsClear, mux, decoder, encoder, errhandler, formatter),
 		DisableSink:           NewDisableSinkHandler(e.DisableSink, mux, decoder, encoder, errhandler, formatter),
 		EnableSink:            NewEnableSinkHandler(e.EnableSink, mux, decoder, encoder, errhandler, formatter),
+		ListSinkVersions:      NewListSinkVersionsHandler(e.ListSinkVersions, mux, decoder, encoder, errhandler, formatter),
 		GetTask:               NewGetTaskHandler(e.GetTask, mux, decoder, encoder, errhandler, formatter),
 		AggregationSources:    NewAggregationSourcesHandler(e.AggregationSources, mux, decoder, encoder, errhandler, formatter),
 		CORS:                  NewCORSHandler(),
@@ -238,6 +242,7 @@ func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.SinkStatisticsClear = m(s.SinkStatisticsClear)
 	s.DisableSink = m(s.DisableSink)
 	s.EnableSink = m(s.EnableSink)
+	s.ListSinkVersions = m(s.ListSinkVersions)
 	s.GetTask = m(s.GetTask)
 	s.AggregationSources = m(s.AggregationSources)
 	s.CORS = m(s.CORS)
@@ -275,6 +280,7 @@ func Mount(mux goahttp.Muxer, h *Server) {
 	MountSinkStatisticsClearHandler(mux, h.SinkStatisticsClear)
 	MountDisableSinkHandler(mux, h.DisableSink)
 	MountEnableSinkHandler(mux, h.EnableSink)
+	MountListSinkVersionsHandler(mux, h.ListSinkVersions)
 	MountGetTaskHandler(mux, h.GetTask)
 	MountAggregationSourcesHandler(mux, h.AggregationSources)
 	MountCORSHandler(mux, h.CORS)
@@ -1633,6 +1639,57 @@ func NewEnableSinkHandler(
 	})
 }
 
+// MountListSinkVersionsHandler configures the mux to serve the "stream"
+// service "ListSinkVersions" endpoint.
+func MountListSinkVersionsHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := HandleStreamOrigin(h).(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("GET", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/versions", f)
+}
+
+// NewListSinkVersionsHandler creates a HTTP handler which loads the HTTP
+// request and calls the "stream" service "ListSinkVersions" endpoint.
+func NewListSinkVersionsHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(ctx context.Context, err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeListSinkVersionsRequest(mux, decoder)
+		encodeResponse = EncodeListSinkVersionsResponse(encoder)
+		encodeError    = EncodeListSinkVersionsError(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "ListSinkVersions")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "stream")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
 // MountGetTaskHandler configures the mux to serve the "stream" service
 // "GetTask" endpoint.
 func MountGetTaskHandler(mux goahttp.Muxer, h http.Handler) {
@@ -1810,6 +1867,7 @@ func MountCORSHandler(mux goahttp.Muxer, h http.Handler) {
 	mux.Handle("OPTIONS", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/statistics/clear", h.ServeHTTP)
 	mux.Handle("OPTIONS", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/disable", h.ServeHTTP)
 	mux.Handle("OPTIONS", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/enable", h.ServeHTTP)
+	mux.Handle("OPTIONS", "/v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/versions", h.ServeHTTP)
 	mux.Handle("OPTIONS", "/v1/tasks/{*taskId}", h.ServeHTTP)
 	mux.Handle("OPTIONS", "/v1/branches/{branchId}/aggregation/sources", h.ServeHTTP)
 	mux.Handle("OPTIONS", "/v1/documentation/openapi.json", h.ServeHTTP)
