# internal/pkg/service/stream/api/openapi/openapi3.yaml
@@ -2005,6 +2005,101 @@ paths:
                                 message: Sink "github-changed-files" not found.
             security:
                 - storage-api-token: []
+    /v1/branches/{branchId}/sources/{sourceId}/sinks/{sinkId}/versions:
+        get:
+            tags:
+                - configuration
+            summary: List sink versions
+            description: List all sink versions.
+            operationId: ListSinkVersions
+            parameters:
+                - name: afterId
+                  in: query
+                  description: Request records after the ID.
+                  allowEmptyValue: true
+                  schema:
+                    type: string
+                    description: Request records after the ID.
+                    default: ""
+                    example: my-object-123
+                  example: my-object-123
+                - name: limit
+                  in: query
+                  description: Maximum number of returned records.
+                  allowEmptyValue: true
+                  schema:
+                    type: integer
+                    description: Maximum number of returned records.
+                    default: 100
+                    example: 100
+                    format: int64
+                    minimum: 1
+                    maximum: 100
+                  example: 100
+                - name: branchId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                    description: ID of the branch or "default".
+                    example: default
+                  example: default
+                - name: sourceId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                    description: Unique ID of the source.
+                    example: github-webhook-source
+                    minLength: 1
+                    maxLength: 48
+                  example: github-webhook-source
+                - name: sinkId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                    description: Unique ID of the sink.
+                    example: github-pr-table-sink
+                    minLength: 1
+                    maxLength: 48
+                  example: github-pr-table-sink
+            responses:
+                "200":
+                    description: OK response.
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/EntityVersions'
+                            example:
+                                versions:
+                                    - number: 3
+                                      hash: f43e93acd97eceb3
+                                      description: The reason for the last change was...
+                                      at: "2022-04-28T14:20:04.000Z"
+                                      by:
+                                        type: user
+                                        tokenId: "896455"
+                                        tokenDesc: john.green@company.com
+                                        userId: "578621"
+                                        userName: John Green
+                                page:
+                                    limit: 100
+                                    totalCount: 1000
+                                    afterId: my-object-123
+                                    lastId: my-object-456
+                "404":
+                    description: 'stream.api.sinkNotFound: Sink not found error.'
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GenericError'
+                            example:
+                                statusCode: 404
+                                error: stream.api.sinkNotFound
+                                message: Sink "github-changed-files" not found.
+            security:
+                - storage-api-token: []
     /v1/branches/{branchId}/sources/{sourceId}/statistics/clear:
         delete:
             tags:
@@ -3842,6 +3937,48 @@ components:
                     recordsCount: 1
                     compressedSize: 1
                     uncompressedSize: 1
+        ListSinkVersionsRequest:
+            type: object
+            properties:
+                afterId:
+                    type: string
+                    description: Request records after the ID.
+                    default: ""
+                    example: my-object-123
+                branchId:
+                    type: string
+                    description: ID of the branch or "default".
+                    example: default
+                limit:
+                    type: integer
+                    description: Maximum number of returned records.
+                    default: 100
+                    example: 100
+                    format: int64
+                    minimum: 1
+                    maximum: 100
+                sinkId:
+                    type: string
+                    description: Unique ID of the sink.
+                    example: github-pr-table-sink
+                    minLength: 1
+                    maxLength: 48
+                sourceId:
+                    type: string
+                    description: Unique ID of the source.
+                    example: github-webhook-source
+                    minLength: 1
+                    maxLength: 48
+            example:
+                branchId: default
+                sourceId: github-webhook-source
+                sinkId: github-pr-table-sink
+                afterId: my-object-123
+                limit: 100
+            required:
+                - branchId
+                - sourceId
+                - sinkId
         ListSinksRequest:
             type: object
             properties:
