# internal/pkg/service/stream/api/service/sink.go
@@ -379,6 +379,22 @@ func (s *service) EnableSink(ctx context.Context, d dependencies.SinkRequestScop
 	return s.mapper.NewTaskResponse(t)
 }
 
+func (s *service) ListSinkVersions(ctx context.Context, scope dependencies.SinkRequestScope, payload *api.ListSinkVersionsPayload) (res *api.EntityVersions, err error) {
+	if err := s.sourceMustExists(ctx, scope.SourceKey()); err != nil {
+		return nil, err
+	}
+
+	list := func(opts ...iterator.Option) iterator.DefinitionT[definition.Sink] {
+		opts = append(opts,
+			iterator.WithLimit(payload.Limit),
+			iterator.WithStartOffset(payload.AfterID, false),
+		)
+		return s.definition.Sink().ListVersions(scope.SinkKey(), opts...)
+	}
+
+	return s.mapper.NewSinkVersions(ctx, payload.AfterID, payload.Limit, list)
+}
+
 func (s *service) sinkMustNotExist(ctx context.Context, k key.SinkKey) error {
 	return s.definition.Sink().MustNotExists(k).Do(ctx).Err()
 }
